--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "coffee-script": "^1.12.7",
+    "connect": "^3.6.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-fileupload": "^0.3.0",
+    "express.io": "^1.1.13",
+    "google-auth-library": "^0.12.0",
+    "googleapis": "^25.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "multer": "^1.3.0",
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^2.0.4"
   }
 }
