--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^0.12.0",
     "googleapis": "^25.0.0",
     "jade": "~1.11.0",
+    "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "serve-favicon": "~2.4.5",
